--- a/templates/home.html
+++ b/templates/home.html
@@ -250,11 +250,24 @@
             background-color: rgba(var(--room-color-rgb), 0.05);
         }
 
+        .reservation-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            margin-bottom: 0.5rem;
+        }
+
         .reservation-room {
             font-size: 1.2em;
             font-weight: 600;
             color: #333;
-            margin-bottom: 0.5rem;
+        }
+
+        .reservation-user {
+            font-size: 0.9em;
+            color: #666;
+            text-align: right;
+            font-style: italic;
         }
 
         .reservation-date {
@@ -278,12 +291,6 @@
         .reservation-card:hover .reservation-guests {
             background-color: #333;
             color: white;
-        }
-
-        .reservation-user {
-            font-size: 0.9em;
-            color: #666;
-            margin-top: 0.5rem;
         }
 
         @media (max-width: 768px) {
@@ -350,7 +357,10 @@
                             {% set rgb = 'rgb(' + color[1:3]|int(base=16)|string + ',' + color[3:5]|int(base=16)|string + ',' + color[5:7]|int(base=16)|string + ')' %}
                             <a href="{{ url_for('edit_reservation', reservation_id=reservation.id) }}" class="reservation-card" style="--room-color: {{ color }}; --room-color-rgb: {{ rgb }}">
                                 <div class="reservation-content">
-                                    <div class="reservation-room">{{ reservation.room.name }}</div>
+                                    <div class="reservation-header">
+                                        <div class="reservation-room">{{ reservation.room.name }}</div>
+                                        <div class="reservation-user">{{ reservation.user.name }}</div>
+                                    </div>
                                     <div class="reservation-date">
                                         Du {{ reservation.start_date.strftime('%d/%m/%Y') }}<br>
                                         au {{ reservation.end_date.strftime('%d/%m/%Y') }}
@@ -358,11 +368,6 @@
                                     <div class="reservation-guests">
                                         {{ reservation.number_of_guests }} personne{{ 's' if reservation.number_of_guests > 1 else '' }}
                                     </div>
-                                    {% if current_user.is_admin %}
-                                        <div class="reservation-user">
-                                            Réservé par {{ reservation.user.name }}
-                                        </div>
-                                    {% endif %}
                                 </div>
                             </a>
                         {% endfor %}
